-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17, 18, 19, 20
-
Component/s: hotspot
-
b09
-
x86
-
generic
All instances of type Register exhibit UB in the form of wild pointer (including null pointer) dereferences. This isn't very hard to fix: we should make Registers pointers to something rather than aliases of small integers.
JDK-8276563 fixed this for Aarch64 while this bug should fix it for x86.
- blocks
-
JDK-8289049 x86_32 build fails with GCC 11 due to newString646_US warning
-
- Resolved
-
- duplicates
-
JDK-8289002 Minimal x86_64 VM build fails with GCC 11: 'this' pointer is null
-
- Resolved
-
- relates to
-
JDK-8276563 Undefined Behaviour in class Assembler
-
- Resolved
-
-
JDK-8289060 Undefined Behaviour in class VMReg
-
- Resolved
-
-
JDK-8291895 Remove PRAGMA_NONNULL_IGNORED from x86 and AArch64
-
- Resolved
-
(2 links to)