8289046: Undefined Behaviour in x86 class Assembler